feat(sweet-spot): C-0.5 - expose wake window data in SweetSpotResult
- Add WakeWindowPosition enum (sleeping/beforeRange/inRange/afterRange)
- Add wakeElapsedMinutes(now) real-time method
- Add wakePosition(now) method for UI position mapping
- Add wakeRangeMinMinutes/wakeRangeMaxMinutes convenience getters
- Add 11 ARB keys (ko + en) for wake window labels and messages
- No calculator changes needed - data already computed internally

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2862,5 +2862,28 @@
   "encouragementDataSleepWarm": "{babyIga} slept {hours} hours in a row last night",
   "@encouragementDataSleepWarm": {"description":"Data: sleep", "placeholders": {"babyIga": {"type": "String"}, "hours": {"type": "String"}}},
   "encouragementDataWeeklyWarm": "{count} records today. Great tracking",
-  "@encouragementDataWeeklyWarm": {"description":"Data: weekly records", "placeholders": {"count": {"type": "String"}}}
+  "@encouragementDataWeeklyWarm": {"description":"Data: weekly records", "placeholders": {"count": {"type": "String"}}},
+
+  "wakeWindowLabel": "Awake Time",
+  "@wakeWindowLabel": {"description":"Wake window label"},
+  "wakeWindowElapsed": "{hours}h {minutes}m",
+  "@wakeWindowElapsed": {"description":"Wake elapsed time (hours+minutes)", "placeholders": {"hours": {"type": "int"}, "minutes": {"type": "int"}}},
+  "wakeWindowElapsedMinutes": "{minutes}m",
+  "@wakeWindowElapsedMinutes": {"description":"Wake elapsed time (minutes only)", "placeholders": {"minutes": {"type": "int"}}},
+  "wakeWindowReferenceRange": "Similar age ref: {min}-{max}min",
+  "@wakeWindowReferenceRange": {"description":"Age-based reference range", "placeholders": {"min": {"type": "int"}, "max": {"type": "int"}}},
+  "wakeWindowPersonalizedRange": "Your baby: {min}-{max}min",
+  "@wakeWindowPersonalizedRange": {"description":"Personalized wake window range", "placeholders": {"min": {"type": "int"}, "max": {"type": "int"}}},
+  "wakeWindowBeforeRange": "Still has energy",
+  "@wakeWindowBeforeRange": {"description":"Before reference range"},
+  "wakeWindowInRange": "May be getting sleepy",
+  "@wakeWindowInRange": {"description":"Within reference range"},
+  "wakeWindowAfterRange": "Watch for sleep cues",
+  "@wakeWindowAfterRange": {"description":"After reference range"},
+  "wakeWindowSleeping": "Sleeping",
+  "@wakeWindowSleeping": {"description":"Sleeping state"},
+  "wakeWindowSegmentAvg": "Avg {minutes}m · {count} segments",
+  "@wakeWindowSegmentAvg": {"description":"Wake segment average + count", "placeholders": {"minutes": {"type": "int"}, "count": {"type": "int"}}},
+  "wakeWindowSegmentCount": "{count} segments",
+  "@wakeWindowSegmentCount": {"description":"Wake segment count", "placeholders": {"count": {"type": "int"}}}
 }
