--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -5433,5 +5433,28 @@
   "encouragementDataSleepWarm": "어젯밤 {babyIga} {hours}시간 연속으로 잤어요",
   "@encouragementDataSleepWarm": {"description":"데이터 기반: 수면", "placeholders": {"babyIga": {"type": "String"}, "hours": {"type": "String"}}},
   "encouragementDataWeeklyWarm": "오늘 {count}건, 꼼꼼히 기록하고 있네요",
-  "@encouragementDataWeeklyWarm": {"description":"데이터 기반: 주간 기록", "placeholders": {"count": {"type": "String"}}}
+  "@encouragementDataWeeklyWarm": {"description":"데이터 기반: 주간 기록", "placeholders": {"count": {"type": "String"}}},
+
+  "wakeWindowLabel": "깨시",
+  "@wakeWindowLabel": {"description":"깨시 라벨"},
+  "wakeWindowElapsed": "{hours}시간 {minutes}분",
+  "@wakeWindowElapsed": {"description":"깨시 경과 시간 (시간+분)", "placeholders": {"hours": {"type": "int"}, "minutes": {"type": "int"}}},
+  "wakeWindowElapsedMinutes": "{minutes}분",
+  "@wakeWindowElapsedMinutes": {"description":"깨시 경과 시간 (분만)", "placeholders": {"minutes": {"type": "int"}}},
+  "wakeWindowReferenceRange": "비슷한 월령 참고: {min}~{max}분",
+  "@wakeWindowReferenceRange": {"description":"교정연령 기준 참고 범위", "placeholders": {"min": {"type": "int"}, "max": {"type": "int"}}},
+  "wakeWindowPersonalizedRange": "이 아기 기준: {min}~{max}분",
+  "@wakeWindowPersonalizedRange": {"description":"개인화된 깨시 참고 범위", "placeholders": {"min": {"type": "int"}, "max": {"type": "int"}}},
+  "wakeWindowBeforeRange": "아직 여유 있어요",
+  "@wakeWindowBeforeRange": {"description":"깨시 참고 범위 이전"},
+  "wakeWindowInRange": "슬슬 졸릴 수 있어요",
+  "@wakeWindowInRange": {"description":"깨시 참고 범위 안"},
+  "wakeWindowAfterRange": "아기 신호를 봐주세요",
+  "@wakeWindowAfterRange": {"description":"깨시 참고 범위 이후"},
+  "wakeWindowSleeping": "수면 중",
+  "@wakeWindowSleeping": {"description":"수면 중 상태"},
+  "wakeWindowSegmentAvg": "평균 {minutes}분 · {count}구간",
+  "@wakeWindowSegmentAvg": {"description":"깨시 구간 평균 + 횟수", "placeholders": {"minutes": {"type": "int"}, "count": {"type": "int"}}},
+  "wakeWindowSegmentCount": "{count}구간",
+  "@wakeWindowSegmentCount": {"description":"깨시 구간 수", "placeholders": {"count": {"type": "int"}}}
 }
