fix(home,growth,stats): Sprint 24 stabilization — napNumber + birth weight + delta display
B2: napNumber uses DB sleep_type with SleepTimeConfig.isNightTime fallback
    instead of SleepClassifier (frozen for Sprint 25 redesign)
HF-A: Auto-seed birth weight as first growth measurement when no data exists
HF-B: Show "Same as last week" (summaryNoChange) when weekly delta is 0

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -543,6 +543,7 @@
     }
   },
   "vsPrev": "vs prev",
+  "summaryNoChange": "Same as last week",
   "dailyGridSleep": "Sleep",
   "dailyGridFeeding": "Feeding",
   "dailyGridDiaper": "Diaper",
