fix(sweet-spot): HF-D calibrating label shows sleep count instead of days
- Variable rename: day → count in sweet_spot_card.dart (2 locations)
- ARB ko: "패턴을 파악하고 있어요 (수면 N건 완료)" / "학습 중 · N/3건"
- ARB en: "Learning patterns (N sleeps done)" / "Learning · N/3 sleeps"
- completedSleepRecords is today's completed sleep count, not app usage days

--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -4123,7 +4123,7 @@
   "@sweetSpotCardAfterZonePlain": {
     "description": "C-5 Sweet Spot card - after zone (plain tone)"
   },
-  "sweetSpotCardCalibratingWarm": "패턴을 파악하고 있어요 ({day}일째)",
+  "sweetSpotCardCalibratingWarm": "패턴을 파악하고 있어요 (수면 {day}건 완료)",
   "@sweetSpotCardCalibratingWarm": {
     "description": "C-5 Sweet Spot card - calibrating (warm tone)",
     "placeholders": {
@@ -4133,7 +4133,7 @@
       }
     }
   },
-  "sweetSpotCardCalibratingPlain": "학습 중 · {day}/3일",
+  "sweetSpotCardCalibratingPlain": "학습 중 · {day}/3건",
   "@sweetSpotCardCalibratingPlain": {
     "description": "C-5 Sweet Spot card - calibrating (plain tone)",
     "placeholders": {
