--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1649,7 +1649,7 @@
   "@sweetSpotCardAfterZonePlain": {
     "description": "C-5 Sweet Spot card - after zone (plain tone)"
   },
-  "sweetSpotCardCalibratingWarm": "Learning patterns (day {day})",
+  "sweetSpotCardCalibratingWarm": "Learning patterns ({day} sleeps done)",
   "@sweetSpotCardCalibratingWarm": {
     "description": "C-5 Sweet Spot card - calibrating (warm tone)",
     "placeholders": {
@@ -1659,7 +1659,7 @@
       }
     }
   },
-  "sweetSpotCardCalibratingPlain": "Learning · {day}/3 days",
+  "sweetSpotCardCalibratingPlain": "Learning · {day}/3 sleeps",
   "@sweetSpotCardCalibratingPlain": {
     "description": "C-5 Sweet Spot card - calibrating (plain tone)",
     "placeholders": {
