fix(stabilization): A-3~A-6 hotfixes — wake delta, calibration, 24h guard, dedup
A-3: Wake window week-over-week delta — load previous week
     DayTimelines, calculate wake segment avg delta, pass to
     StatSummaryCard (replaces hardcoded change: 0)

A-4: Calibrating daily reset → cumulative — count unique days
     with sleep data in last 14d (from _allActivities) instead
     of today's completed sleep count. Prevents "calibrating"
     display after data import or next-day reset.
     ARB messages updated: "sleeps done" → "days of data"

A-5: getOngoingActivities() 24h guard — same pattern as
     getActiveSleepForBaby HF-ghost. Filters out 24h+ stale
     activities from ongoing query.

A-6: Birth measurement DB save dedup — date-based existence
     check before auto-seeding birth weight measurement.
     Prevents duplicates when DB load is implemented.

7/7 Gate pass. 94/94 tests pass. 0 errors, 0 warnings.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1649,9 +1649,9 @@
   "@sweetSpotCardAfterZonePlain": {
     "description": "C-5 Sweet Spot card - after zone (plain tone)"
   },
-  "sweetSpotCardCalibratingWarm": "Learning patterns ({day} sleeps done)",
+  "sweetSpotCardCalibratingWarm": "Learning patterns ({day} days of data)",
   "@sweetSpotCardCalibratingWarm": {
-    "description": "C-5 Sweet Spot card - calibrating (warm tone)",
+    "description": "A-4: calibrating (warm tone) — cumulative days with sleep data",
     "placeholders": {
       "day": {
         "type": "int",
@@ -1659,9 +1659,9 @@
       }
     }
   },
-  "sweetSpotCardCalibratingPlain": "Learning · {day}/3 sleeps",
+  "sweetSpotCardCalibratingPlain": "Learning · {day}/3 days",
   "@sweetSpotCardCalibratingPlain": {
-    "description": "C-5 Sweet Spot card - calibrating (plain tone)",
+    "description": "A-4: calibrating (plain tone) — cumulative days with sleep data",
     "placeholders": {
       "day": {
         "type": "int",
