feat(home): B-2 LastActivityRow 2-column + Timer refactor
- Remove sleep column (SweetSpotCard handles sleep info)
- 3-column → 2-column: feeding + diaper only
- StatelessWidget → StatefulWidget with 1-min Timer auto-refresh
- Time format: "2h ago" → "2h 3m ago" (precision improvement)
- Add _ActivityItem label row (icon + label + elapsed time)
- Add 4 ARB keys: lastActivityFeeding, lastActivityDiaper,
  timeAgoHoursMinutes, lastActivityNoRecord
- Reuse 4 existing ARB keys: timeAgoJustNow, timeAgoMinutes,
  timeAgoHours, daysAgoCount
- Remove lastSleep prop from HomeScreen call site
- Preserve HomeProvider.lastSleepTime (SweetSpot consumer)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2895,5 +2895,20 @@
   "wakeWindowCardRef": "Typical awake time: {min}-{max}min",
   "@wakeWindowCardRef": {"description":"Sweet Spot card wake reference range (compact)", "placeholders": {"min": {"type": "int"}, "max": {"type": "int"}}},
   "wakeWindowCardRefHours": "Typical awake time: {minH}h{minM}m-{maxH}h{maxM}m",
-  "@wakeWindowCardRefHours": {"description":"Sweet Spot card wake reference range (hours)", "placeholders": {"minH": {"type": "int"}, "minM": {"type": "int"}, "maxH": {"type": "int"}, "maxM": {"type": "int"}}}
+  "@wakeWindowCardRefHours": {"description":"Sweet Spot card wake reference range (hours)", "placeholders": {"minH": {"type": "int"}, "minM": {"type": "int"}, "maxH": {"type": "int"}, "maxM": {"type": "int"}}},
+
+  "lastActivityFeeding": "Feeding",
+  "@lastActivityFeeding": {"description": "LastActivityRow - feeding label"},
+  "lastActivityDiaper": "Diaper",
+  "@lastActivityDiaper": {"description": "LastActivityRow - diaper label"},
+  "timeAgoHoursMinutes": "{hours}h {minutes}m ago",
+  "@timeAgoHoursMinutes": {
+    "description": "Time ago - N hours M minutes ago",
+    "placeholders": {
+      "hours": {"type": "int", "example": "2"},
+      "minutes": {"type": "int", "example": "3"}
+    }
+  },
+  "lastActivityNoRecord": "-",
+  "@lastActivityNoRecord": {"description": "LastActivityRow - no record"}
 }
