feat(design): C-5.2 Phase 1 — Living Breath color tokens + ARB keys
- Replace LuluSweetSpotColors class (remove withValues violation)
- Add 35+ solid color tokens for 6 states:
  lavender (early/overdue), amber (approaching), gold (optimal),
  night (bedtime), calibrating, overdue transition
- Add pulse interpolation tokens (base/peak pairs)
- Add gold text, glow, marker, band tokens for Sweet Spot state
- Add 2 new ARB keys:
  sweetSpotOverdueRecordNudge, sweetSpotWakeElapsedWithRef
- Existing warm/plain ARB keys reused (no duplication)
- No widget code changes (tokens only)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2910,5 +2910,16 @@
     }
   },
   "lastActivityNoRecord": "-",
-  "@lastActivityNoRecord": {"description": "LastActivityRow - no record"}
+  "@lastActivityNoRecord": {"description": "LastActivityRow - no record"},
+
+  "sweetSpotOverdueRecordNudge": "Slept? Tap to record",
+  "@sweetSpotOverdueRecordNudge": {"description": "C-5.2 Living Breath - overdue record nudge message"},
+  "sweetSpotWakeElapsedWithRef": "Awake {elapsed} ({range})",
+  "@sweetSpotWakeElapsedWithRef": {
+    "description": "C-5.2 Living Breath - wake elapsed + reference range combined",
+    "placeholders": {
+      "elapsed": {"type": "String", "example": "47min"},
+      "range": {"type": "String", "example": "60-90min"}
+    }
+  }
 }
