fix(import): retry on network failure + sanitize error messages
FIX-I1: Auto-retry on save failure (max 2 retries, 1s delay)
  - import_service.dart: _createActivityWithRetry() wraps createActivity
  - Handles transient ClientException (socket disconnect, timeout)
  - After all retries exhausted, record counted as failed (not abort)

FIX-I2: User-friendly error messages (no raw exception in UI)
  - import_service.dart: errors list stores timestamp only, not exception
  - import_provider.dart: _setError uses internal codes, not raw $e
  - import_screen.dart: complete screen uses importPartialFailure ARB key

FIX-I3: Supabase URL exposure prevention
  - Raw exceptions only in debugPrint, never in UI-facing strings
  - Error screen maps internal codes to localized messages

ARB: importPartialFailure (ko/en)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1754,6 +1754,15 @@
       }
     }
   },
+  "importPartialFailure": "{count} record(s) failed — re-import to recover automatically",
+  "@importPartialFailure": {
+    "placeholders": {
+      "count": {
+        "type": "int",
+        "example": "1"
+      }
+    }
+  },
   "errorUnknown": "An unknown error occurred.",
   "feedingTimeLabel": "Feeding Time",
   "notesPlaceholder": "Record any special notes",
