--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -4245,6 +4245,16 @@
       }
     }
   },
+  "importPartialFailure": "{count}건 저장 실패 — 다시 가져오기하면 자동으로 복구됩니다",
+  "@importPartialFailure": {
+    "description": "Import - partial failure message (user-friendly, no raw exception)",
+    "placeholders": {
+      "count": {
+        "type": "int",
+        "example": "1"
+      }
+    }
+  },
   "errorUnknown": "알 수 없는 오류가 발생했습니다.",
   "@errorUnknown": {
     "description": "알 수 없는 오류 메시지"
